tests/src/frontend/typechecking/invalid/pattern_match_type_2.sk
base class Foo {
  type T;
  fun matcher(x : this::T): void {
    x match { this::T -> void }
  }
}
